--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.15.4",
